syntax = "proto3";

package proto.keeper.grpcapi;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/ex0rcist/gophkeeper/pkg/keeper/grpcapi";

enum SecretType {
  SECRET_TYPE_UNSPECIFIED = 0;
  SECRET_TYPE_CREDENTIAL = 1;
  SECRET_TYPE_TEXT = 2;
  SECRET_TYPE_BLOB = 3;
  SECRET_TYPE_CARD = 4;
}

message Secret {
  uint64 id = 1;
  string title = 2;
  string metadata = 3;
  bytes payload = 4;
  SecretType secret_type = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message GetUserSecretsResponseV1 {
  repeated Secret secrets = 1;
}

message GetUserSecretRequestV1 {
  uint64 id = 1;
}

message GetUserSecretResponseV1 {
  Secret secret = 1;
}

message SaveUserSecretRequestV1 {
  Secret secret = 1;
}

message DeleteUserSecretRequestV1 {
  uint64 id = 1;
}

service Secrets {
  rpc GetUserSecretsV1(google.protobuf.Empty) returns (GetUserSecretsResponseV1);
  rpc GetUserSecretV1(GetUserSecretRequestV1) returns (GetUserSecretResponseV1);
  rpc SaveUserSecretV1(SaveUserSecretRequestV1) returns (google.protobuf.Empty);
  rpc DeleteUserSecretV1(DeleteUserSecretRequestV1) returns (google.protobuf.Empty);
}